--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hyperlinks</title>
+    <title>Amrik | Links</title>
 </head>
 
 <style>
@@ -42,7 +42,7 @@
 <body>
     <h1>Links Go Here : </h1>
 
-    <a href="https://www.youtube.com/watch?v=enHai1y5Knc&list=PLCzaIJYXP5Yf57bld-sUTSD2-aCEejZqb" target="_blank">CBSE Class 11 Mathematics - Video Lectures</a><br><br>
+    <a href="https://www.youtube.com/playlist?list=PLCzaIJYXP5Yf57bld-sUTSD2-aCEejZqb" target="_blank">CBSE Class 11 Mathematics - Video Lectures</a><br><br>
     <a href="https://www.youtube.com/playlist?list=PLBKu20lfr_S8Sl1Ed2qTZV9HOZNad6CsP" target="_blank">CBSE Class 11 Physics - Video Lectures</a><br><br>
     <a href="https://www.youtube.com/playlist?list=PLBKu20lfr_S9uY2dZzDUGODgNaaV1jMKS" target="_blank">CBSE Class 11 Chemistry - Video Lectures</a><br><br>
     <a href="https://www.examfear.com" target="_blank">ExamFear - Practice. Notes and QnA</a><br><br>
